Added arquillian tests to webapp